@@ -33,11 +33,9 @@ import java.util.zip.ZipFile;
 
 import org.apache.camel.tooling.util.ReflectionHelper;
 import org.apache.maven.artifact.Artifact;
-import org.apache.maven.execution.MavenSession;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
-import org.apache.maven.plugins.annotations.Component;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.MavenProjectHelper;
@@ -46,18 +44,19 @@ import org.codehaus.plexus.build.BuildContext;
 public abstract class AbstractGenerateMojo extends AbstractMojo {
     private static final String INCREMENTAL_DATA = "";
 
+    private final MavenProjectHelper projectHelper;
+    private final BuildContext buildContext;
     @Parameter(property = "project", required = true, readonly = true)
     protected MavenProject project;
-    @Component
-    protected MavenProjectHelper projectHelper;
-    @Component
-    protected BuildContext buildContext;
-    @Component
-    private MavenSession session;
     @Parameter(defaultValue = "${showStaleFiles}")
     private boolean showStaleFiles;
     @Parameter(defaultValue = "false")
     private boolean skip;
+
+    protected AbstractGenerateMojo(MavenProjectHelper projectHelper, BuildContext buildContext) {
+        this.projectHelper = projectHelper;
+        this.buildContext = buildContext;
+    }
 
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
@@ -78,14 +77,16 @@ public abstract class AbstractGenerateMojo extends AbstractMojo {
 
     protected abstract void doExecute() throws MojoFailureException, MojoExecutionException;
 
-    protected void invoke(Class<? extends AbstractMojo> mojoClass) throws MojoExecutionException, MojoFailureException {
+    protected void invoke(Class<? extends AbstractGeneratorMojo> mojoClass)
+            throws MojoExecutionException, MojoFailureException {
         invoke(mojoClass, null);
     }
 
-    protected void invoke(Class<? extends AbstractMojo> mojoClass, Map<String, Object> parameters)
+    protected void invoke(Class<? extends AbstractGeneratorMojo> mojoClass, Map<String, Object> parameters)
             throws MojoExecutionException, MojoFailureException {
         try {
-            AbstractMojo mojo = mojoClass.getDeclaredConstructor().newInstance();
+            AbstractGeneratorMojo mojo = mojoClass.getDeclaredConstructor(MavenProjectHelper.class, BuildContext.class)
+                    .newInstance(projectHelper, buildContext);
             mojo.setLog(getLog());
             mojo.setPluginContext(getPluginContext());
 
@@ -100,7 +101,7 @@ public abstract class AbstractGenerateMojo extends AbstractMojo {
                 });
             }
 
-            ((AbstractGeneratorMojo) mojo).execute(project, projectHelper, buildContext);
+            mojo.execute(project);
 
         } catch (MojoExecutionException | MojoFailureException e) {
             throw e;
@@ -159,7 +160,7 @@ public abstract class AbstractGenerateMojo extends AbstractMojo {
 
     private String getPreviousRunData(Path cacheData) throws IOException {
         if (Files.isRegularFile(cacheData)) {
-            return new String(Files.readAllBytes(cacheData), StandardCharsets.UTF_8);
+            return Files.readString(cacheData, StandardCharsets.UTF_8);
         } else {
             return null;
         }
@@ -170,7 +171,7 @@ public abstract class AbstractGenerateMojo extends AbstractMojo {
                 "org.apache.camel_camel-package-maven-plugin_info_xx");
     }
 
-    private long isRecentlyModifiedFile(Path p) {
+    private static long isRecentlyModifiedFile(Path p) {
         try {
             BasicFileAttributes fileAttributes = Files.readAttributes(p, BasicFileAttributes.class);
 
@@ -185,7 +186,7 @@ public abstract class AbstractGenerateMojo extends AbstractMojo {
         }
     }
 
-    private Stream<String> newer(long lastmod, File file) {
+    private static Stream<String> newer(long lastmod, File file) {
         try {
             if (!file.exists()) {
                 return Stream.empty();
